apps/monitoring/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    alertmanager: main
  name: alertmanager-main
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9093
    targetPort: web
  - name: reloader
    port: 8080
    targetPort: 8080
  selector:
    alertmanager: main
    app: alertmanager
  sessionAffinity: ClientIP
